# tauri-system-monitor

./: .eslintrc.cjs  .gitignore  .prettierrc.yaml  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
src/: App.tsx  const.ts  index.css  index.tsx  utils.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  native.rs  structs.rs
src/components/: index.ts
src/components/Card/: index.css  index.tsx
src/components/ECharts/: index.tsx
src/components/Spin/: index.tsx
src/hooks/: useInterval.ts
src/pages/MainPage/: index.tsx
src/pages/MainPage/components/BatteryPanel/: const.ts  index.css  index.tsx
src/pages/MainPage/components/CPUPanel/: UsageCharts.tsx  const.ts  index.tsx
src/pages/MainPage/components/GaugePanel/: GaugeChart.tsx  const.ts  index.tsx
src/pages/MainPage/components/MemoryPanel/: const.ts  index.tsx
src/pages/MainPage/components/ProcessPanel/: const.ts  index.tsx
src/store/: index.ts
src/store/config/: index.ts
src/store/monitor/: index.ts  typings.d.ts
